syntax = "proto3";

import "google/protobuf/descriptor.proto";

package io.restorecommerce.options;

extend google.protobuf.FieldOptions {
  optional Resolver resolver = 31000;
}

extend google.protobuf.MethodOptions {
  optional bool is_query = 31001;
}

extend google.protobuf.ServiceOptions {
  optional string service_name = 31002;
}

message Resolver {
  string target_type = 1;
  string target_service = 2;
  string target_sub_service = 3;
  string target_method = 4;
  string field_name = 5;
}
